fixes #3892 - process REMOTE_USER_GROUP_N and REMOTE_USER_GROUP_#, add user to external user groups.

--- a/app/views/usergroups/_form.html.erb
+++ b/app/views/usergroups/_form.html.erb
@@ -12,6 +12,8 @@
       <%= text_f f, :name %>
       <%= multiple_checkboxes f, :usergroups, @usergroup, Usergroup, :label => _("User Groups") %>
       <%= multiple_checkboxes f, :users, @usergroup, User, :label => _("Users") %>
+
+      <%= select_f f, :auth_source_id, AuthSource.all, :id, :to_label %>
     </div>
 
     <div class="tab-pane" id="roles">
