fixes #5241 - Add support for external user groups.

--- a/app/views/usergroups/index.html.erb
+++ b/app/views/usergroups/index.html.erb
@@ -1,3 +1,4 @@
+<%= javascript 'lookup_keys' %>
 <% title _("User Groups") %>
 
 <% title_actions display_link_if_authorized(_("New User group"), hash_for_new_usergroup_path) %>
